# flauers

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  main.py  math_stuff.m  pyproject.toml  requirements.txt  systolic_visualization.py  test.py  tutorial.ipynb  utils.py  visualization_utils.py
Visualization/: Untitled.ipynb
src/: CMakeLists.txt  best_model  main.py  saffira.cpp  saffiramodule.c  systolic_injector.h  test.py  test_migen.py  tmp.py
src/flauers/: .__init__.py.swp  __init__.py  exceptions.py  fault_models.py  lenet.py  lenet_keras.py  lowerings.py  projection_matrices.py  systolic_array.py  test_lowering.py  test_main_module.py  test_systolic_array.py  test_tiling.py  test_torch.py  tilings.py  utils.py
src/flauers/cpu/: __init__.py  injects.py  mamtuls_int.py  matmuls_float.py  test_cpu_optimizations.py
src/flauers/cuda/: __init__.py  inject_float.cu  injects.cu  injects.py  lowerings.py  matmuls_float.py  matmuls_int.py  test_cuda.py  utils.py
src/flauers/torch/: __init__.py  quantized.py
src/saffira/: __init__.py  cnn_ops.py  fault_models.py  lowerings.py  projection_matrices.py  sahdl.py  systolic_array.py  utils.py
src/saffira/cpu/: __init__.py  injects.py  mamtuls_int.py  matmuls_float.py
src/saffira/gpu/: float_kernels.py
src/saffira/torch/: __init__.py
src/systolic_injector/: Identifying the injection layer.py  __init__.py  cnn_ops.py  fault_models.py  lowerings.py  systolic_array.py  utils.py
systolic_injector/: __init__.py  cnn_ops.py
